test_programs/compile_failure/noirc_frontend_tests_enums_constructor_arg_arity_mismatch_in_pattern/src/main.nr

        fn main() {
            match Foo::One(1) {
                Foo::One(_, _) => (),
                Foo::Two(_) => (),
            }
        }

        enum Foo {
            One(i32),
            Two(i32, i32),
        }
    